<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mtihani Revise</string>
    <string name="desc_1">Find all the KCSE past papers from 1996 to 2017 and challenge your examiners with A\'s!</string>
    <string name="slide_header_1" tools:ignore="TypographyEllipsis">Revision...</string>
    <string name="btn_next">skip</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="font">sans-serif</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="reset_success">Welcome back! Password reset was successful,you can now log in below to access your account.</string>
    <string name="email">Email</string>
    <string name="send">send</string>
    <string name="enter_your_email_to_send_password_reset_instructions">Enter your email to send password reset instructions</string>
    <string name="reset">Reset</string>
    <string name="action_settings">Rate this App</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="country_name">Nigeria</string>
    <string name="subject_paper">Subject Paper</string>
    <string name="kcse_1996">KCSE 1996</string>
    <string name="year">Year</string>
    <string name="sign_in_with_google">Sign up with Google</string>
    <string name="search">Search</string>
    <string name="menu">menu</string>
    <string name="rate_app">Rate app</string>
    <string name="rate_dialog_title">Rate Mtihani Revise</string>
    <string name="rate_dialog_message">If you are enjoying Mtihani Revise, would you mind taking a moment to rate it? It wont take more than a minute. Thanks for your support!</string>
    <string name="logout">Logout</string>
    <string name="twitterUsername">\@derrickwadek</string>
    <string name="wadektech_gmail_com">wadektech@gmail.com</string>
    <string name="profile">Android Engineer @mGurush</string>
    <string name="profile_two">Tech writer and i love to code!</string>
    <string name="phone">Phone</string>
    <string name="_254_738_327_378" tools:ignore="TypographyDashes">+254-738-327-378</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_com_wadektech">facebook.com/WadekTech Ltd.</string>
    <string name="about">About</string>
    <string name="rate">Rate App</string>
    <string name="_menu">Logout</string>
    <string name="derrick_wadek">Derrick Wadek</string>
    <string name="nairobi_kenya">Nairobi, Kenya</string>
    <string name="login_title">Mtihani Revise</string>
    <string name="quote">Knowledge is power. Information is liberating. Education is the premise of progress, in every society, in every family.</string>
    <string name="email_profile">Email</string>
    <string name="menu_share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="hi_there_am_using_mtihani_revise">Hi there, am using Mtihani Revise</string>
    <string name="update_status">Update status</string>
    <string name="display_name">Display Name</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="current_user_status">Current User Status</string>
    <string name="_profile">Display Name</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
    <string name="upload_image">upload image</string>
    <string name="send_button_label">Send</string>
    <string name="or">OR</string>
    <string name="_email">email</string>
    <string name="hello_username">Hello!</string>
    <string name="chat_room">Chat Room</string>
    <string name="type_message">write message...</string>
    <string name="profile_title">Profile</string>
    <string name="upload_pdf">Upload Pdf</string>
    <string name="navigate_to_app">Navigate to App</string>
    <string name="logout_admin">Logout</string>
    <string name="already_registered_login">Already registered? Click to Login</string>
    <string name="user_information">User information</string>
    <string name="users_analytics">Users Analytics</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="select_file">Select File</string>
    <string name="navigate">Navigate to App</string>
    <string name="tap">Select File</string>
    <string name="upload">Upload File</string>
    <string name="no_selected_file">No selected file!</string>
    <string name="not_yet_registered">Not yet registered? Click to Register.</string>
    <string name="status">status</string>
    <string name="hello_am_using_mtihani_revise">Hello! Am using mtihani revise.</string>
    <string name="search_users">Search...</string>
    <string name="seen">seen</string>
    <string name="banner">write message</string>
    <string name="def_status_banner">I am a proud user of Mtihani Revise</string>
    <string name="update_your_status">Update your status</string>
    <string name="sta">Status</string>
    <string name="status_update">Status Update</string>
    <string name="hint_status">Status</string>
    <string name="_status_update">Update Status</string>
    <string name="status_banner">Am a proud user of Mtihani Revise!</string>
    <string name="enter_admin_password">Enter admin password</string>
    <string name="admin_panel">admin panel</string>
    <string name="pdf_download">PDF Download</string>
    <string name="cancel">Cancel</string>
    <string name="open_PDF">OPEN PDF</string>
    <string name="banner_ad_id">ca-app-pub-7833667602532832/5369364649</string>
    <string name="interstitial_ad_id">ca-app-pub-7833667602532832/1495173597</string>
    <string name="rewarded_ad_id">ca-app-pub-7833667602532832/9324457809</string>
    <string name="login_with_google">Login with Google</string>
    <string name="app_version">App Version</string>
    <string name="registered_symbol">Version 1.0, Mtihani Revise®</string>
    <string name="copyright_symbol">© 2019 - Wadek Technologies, All rights reserved</string>
    <string name="hintSearch">Search</string>
    <string name="back_to_nhome">Back to\nHome</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="general_header">General</string>
    <string name="app_header">Mtihani Revise</string>
    <string name="developer_header">Developer</string>
    <string name="version_header">Version</string>

    <string name="signature_title">Your signature</string>
    <string name="dark_title">Dark Theme</string>
    <string name="notifications_title">Notifications</string>
    <string name="ratings_title">Rate Mtihani Revise?</string>
    <string name="share_title">Share Mtihani Revise</string>
    <string name="contact_title">Contact the developer</string>
    <string name="social_title">Follow Me</string>
    <string name="version_title">Mtihani Revise</string>
    <string name="bug_title">Report a bug</string>
    <string name="logout_title">Logout</string>

    <string name="pref_Night_mode_key">night_mode_state_key</string>
    <string name="select_theme">Select Theme</string>

    <!--    The List Preference Labels-->
    <string name="default_mode_label">System Default</string>
    <string name="dark_mode_label">Dark Mode</string>
    <string name="day_mode_label">Day Mode</string>

    <!--    The List Preference values-->
    <string name="default_mode_value">System Default</string>
    <string name="dark_mode_value">Dark Mode</string>
    <string name="day_mode_value">Day Mode</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="offline">offline</string>
    <string name="active_now">Active now</string>
    <string name="show_password">show password</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
