<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">
        <SwitchPreferenceCompat
            app:key="dark"
            app:icon="@drawable/ic_dark"
            app:title="@string/dark_title"
            app:summary="Toggle on dark theme for lights out experience."
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="notifications"
            app:icon="@drawable/ic_notifications"
            app:title="@string/notifications_title"
            app:summary="Turn off all notifications."
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_header">
        <Preference
            app:key="rate"
            app:icon="@drawable/ic_rate_review"
            app:summary="Rate us to know how to serve you better."
            app:title="@string/ratings_title" />

        <Preference
            app:key="rate"
            app:icon="@drawable/ic_share"
            app:summary="Enjoying Mtihani Revise?, please feel free to share it among friends."
            app:title="@string/share_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/developer_header">
        <Preference
            app:key="contact"
            app:icon="@drawable/ic_about"
            app:summary="Leave a message and let me know how you feel."
            app:title="@string/contact_title" />
        <Preference
            app:key="social"
            app:icon="@drawable/ic_follow"
            app:summary="Follow me on twitter."
            app:title="@string/social_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/version_header">

        <Preference
        app:key="app_version"
        app:title="@string/version_title"
            app:icon="@drawable/ic_mtihani"
        app:summary="@string/registered_symbol" />

        <Preference
            app:key="bugs"
            app:icon="@drawable/ic_bug_report"
            app:title="@string/bug_title"
            app:summary="Click here to report any issues with Mtihani Revise." />

    </PreferenceCategory>
</PreferenceScreen>