<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
<item android:title=""
    android:icon="@drawable/menu_item"
    app:showAsAction="ifRoom" >

    <menu>

    <item
        android:id="@+id/menuAbout"
        android:icon="@drawable/about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/about" />

    <item
        android:id="@+id/rate_app"
        android:icon="@drawable/rate"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/rate" />

    <item
        android:id="@+id/menuLogout"
        android:icon="@drawable/logout"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/_menu" />

    </menu>
</item>

</menu>