<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:ignore="contentDescription"
    tools:context=".auth.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/tree"
        android:layout_alignParentLeft="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_35sdp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_35sdp"
        android:paddingRight="@dimen/_35sdp"
        tools:ignore="NotSibling"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/text"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-light" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingStart="@dimen/_25sdp"
            android:textColor="@color/text"
            android:textSize="@dimen/_15ssp"
            app:fontFamily="sans-serif-light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_191sdp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_35sdp"
        android:paddingRight="@dimen/_35sdp"
        tools:ignore="NotSibling"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="@color/text"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-light" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingStart="@dimen/_25sdp"
            android:textColor="@color/text"
            android:textSize="@dimen/_15ssp"
            app:fontFamily="sans-serif-light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_112sdp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_35sdp"
        android:paddingRight="@dimen/_35sdp"
        tools:ignore="NotSibling"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAllCaps="true"
            android:textColor="@color/text"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-light" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingStart="@dimen/_25sdp"
            android:textColor="@color/text"
            android:textSize="@dimen/_15ssp"
            app:fontFamily="sans-serif-light"
            tools:ignore="TextFields" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_165sdp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/btn_bg"
        android:text="@string/sign_up"
        app:fontFamily="@string/font" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_130sdp"
        android:text="@string/already_registered_login"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="@dimen/_18ssp"
        app:fontFamily="@string/font" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_85sdp"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:fontFamily="@string/font" />


    <Button
        android:id="@+id/loginButton"
        style="@style/allBlueButtons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/button_bg"
        android:drawableStart="@drawable/google_login_bg"
        android:paddingStart="@dimen/_16sdp"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        android:drawableLeft="@drawable/google_login_bg"
        android:paddingLeft="@dimen/_16sdp"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>